profile, login and registration

--- a/templates/admin/home_admin.html.twig
+++ b/templates/admin/home_admin.html.twig
@@ -7,11 +7,10 @@
 {% endblock %}
 
 {% block body %}
-{{ form_start(adminForm) }}
-    {{ form_row(adminForm.email) }}
-    {{ form_row(adminForm.password) }}
-    {{ form_row(adminForm.roles) }}
- {{ form_end(adminForm) }}
+<h1>hgellodqzd</h1>
+
+
+
 {% endblock %}
 
 {% block javascripts %}
