--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/Navigation-with-Button.css">
     <link rel="stylesheet" href="/css/Footer-Basic.css">
     <link rel="stylesheet" href="/fonts/ionicons.min.css">
