--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,11 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="fonts/ionicons.min.css">
-    <link rel="stylesheet" href="css/Login-Form-Clean.css">
-    <link rel="stylesheet" href="/css/Navigation-with-Button.css">
-    <link rel="stylesheet" href="/fonts/ionicons.min.css">
+    {{ parent() }}
 {% endblock %}
 
 {% block body %}
@@ -35,9 +31,5 @@
         </form>
     </div>
 
-
-
-
-    <script src="/js/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
 {% endblock %}
+
