--- a/templates/home/profile.html.twig
+++ b/templates/home/profile.html.twig
@@ -13,7 +13,7 @@
         <hr>
         <div class="container bootstrap snippet">
         <div class="row">
-            <div class="col-sm-10"><h1>{{client.fullname}}</h1></div>
+            <div class="col-sm-10"><h1>{{app.user.loginName }}</h1></div>
             </div>
 
 <br><br>
