--- a/templates/admin/home_admin.html.twig
+++ b/templates/admin/home_admin.html.twig
@@ -2,8 +2,7 @@
 
 {% block title %}Hello AdminController!{% endblock %}
 {% block stylesheets %}
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="/css/styles.css">
+    {{parent()}}
 {% endblock %}
 
 {% block body %}
@@ -14,7 +13,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="/js/aymen.js"></script>
+    {{ parent() }}
 {% endblock %}
