--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -6,6 +6,11 @@
         <hr>
         <div class="form-group">
 
+            {{ form_row(form.loginName,{'label' : 'Username', 'attr' : {'placeholder' : 'Username ....','class' : 'form-control'}}) }}
+
+        </div>
+        <div class="form-group">
+
                 {{ form_row(form.email,{'label' : 'Email', 'attr' : {'placeholder' : 'Email ....','class' : 'form-control'}}) }}
 
         </div>
