--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -9,6 +9,7 @@
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Username</th>
                 <th>Email</th>
                 <th>Roles</th>
                 <th>actions</th>
@@ -18,6 +19,7 @@
         {% for user in users %}
             <tr>
                 <td>{{ user.id }}</td>
+                <td>{{ user.loginName }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>
