--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Profile</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Categories </a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="{{path('informatique')}}">Informatique</a><a class="dropdown-item" role="presentation" href="#">Multimedia</a><a class="dropdown-item" role="presentation" href="#">Immobilier</a></div>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="">Informatique</a><a class="dropdown-item" role="presentation" href="#">Multimedia</a><a class="dropdown-item" role="presentation" href="#">Immobilier</a></div>
                     </li>
                     {% if not is_granted('ROLE_USER') %}
                 </ul><span class="navbar-text actions"> <a class="login" href="{{ path('app_login') }}">Log In</a><a class="btn btn-light action-button" role="button" href="{{ path('app_register') }}">Sign Up</a></span>
