--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -10,6 +10,7 @@
     </head>
 
     {% for client in clients %}
+
     <hr>
     <div class="container bootstrap snippet">
         <div class="row">
@@ -42,7 +43,6 @@
                     <li class="active"><a data-toggle="tab" href="#home">Profile</a></li>
                     <li><a data-toggle="tab" href="#messages">Login Information</a></li>
                 </ul>
-
 
                 <div class="tab-content">
                     <div class="tab-pane active" id="home">
@@ -105,11 +105,13 @@
                                 </div>
                             </div>
                         </form>
-{% endfor %}
+
                         <hr>
 
                     </div><!--/tab-pane-->
+
                     <div class="tab-pane" id="messages">
+
 
                         <h2></h2>
 
@@ -139,10 +141,11 @@
                             </div>
                         </form>
 
-                    </div><!--/tab-pane-->
+                    </div><br><br>
 
                 </div><!--/tab-pane-->
-            </div><!--/tab-content-->
+
+    </div><!--/tab-content-->
 
         </div><!--/col-9-->
     </div><!--/row-->
