--- a/templates/home/editlogin.html.twig
+++ b/templates/home/editlogin.html.twig
@@ -12,7 +12,7 @@
         <hr>
         <div class="container bootstrap snippet">
         <div class="row">
-            <div class="col-sm-10"><h1>{{ app.user.email }}</h1></div>
+            <div class="col-sm-10"><h1>{{ app.user.loginName }}</h1></div>
             </div>
 <br><br>
 
