--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -2,7 +2,8 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 {% block stylesheets %}
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    {{ parent() }}
+
 {% endblock %}
 
 {% block body %}
