--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse"
                  id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Profile</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="">Profile</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Categories </a>
                         <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="">Informatique</a><a class="dropdown-item" role="presentation" href="#">Multimedia</a><a class="dropdown-item" role="presentation" href="#">Immobilier</a></div>
                     </li>
