--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -14,7 +14,7 @@
     <hr>
     <div class="container bootstrap snippet">
         <div class="row">
-            <div class="col-sm-10"><h1>{{ client.fullname }}</h1></div>
+            <div class="col-sm-10"><h1>{{ app.user.loginName }}</h1></div>
 
         </div>
         <br><br>
@@ -109,7 +109,7 @@
                         <hr>
 
                     </div><!--/tab-pane-->
-
+{% endfor %}
                     <div class="tab-pane" id="messages">
 
 
@@ -117,6 +117,15 @@
 
                         <hr>
                         <form class="form" action="{{ path('profile_edit_login' , {id : app.user.id}) }}">
+
+                            <div class="form-group">
+
+                                <div class="col-xs-6">
+                                    <label for="username"><h4>Username</h4></label>
+                                    <input type="text" class="form-control" value="{{ app.user.loginName }}" disabled>
+                                </div>
+                            </div>
+
                             <div class="form-group">
 
                                 <div class="col-xs-6">
