--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,7 +13,7 @@
                 <div style="width: 200%;">
                     <div class="form-group">
                         <div class="col-sm-4">
-                            {{ form_row(registrationForm.username,{'label' : 'Username', 'attr' : {'placeholder' : 'Your username ....','class' : 'form-control'}}) }}
+                            {{ form_row(registrationForm.loginName,{'label' : 'Username', 'attr' : {'placeholder' : 'Your username ....','class' : 'form-control'}}) }}
                         </div>
                     </div>
                     <div class="form-group">
