--- a/templates/home/profile.html.twig
+++ b/templates/home/profile.html.twig
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
 
-    {% for client in clients %}
         <hr>
         <div class="container bootstrap snippet">
         <div class="row">
@@ -93,15 +92,15 @@
                            <div class="col-xs-12">
                                 <br>
                               	<button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                              	<a href="{{ path('account', {id : client.id}) }}" class="btn btn-lg">Cancel</a>
+                              	<a href="" class="btn btn-lg">Cancel</a>
                             </div>
                       </div>
-{% endfor %}
 
                         <hr>
                         {{ form_end(form) }}
      </div>
           </div>
+
 
     </div><!--/col-9-->
     </div><!--/row-->
