--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,11 +33,11 @@
         </div>
     </nav>
 
-
+    <div class="container pt-5">
     {% block body %}
 
     {% endblock %}
-
+    </div>
     <div class="footer-basic">
         <footer>
             <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
