--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -15,7 +15,7 @@
     <div class="row">
 
         <div class="col-lg-3">
-            <h1 class="my-4">Shop Name</h1>
+            <h1 class="my-4">Categories</h1>
             <div class="list-group">
                 <a href="{{ path('informatique') }}" class="list-group-item active">Informatique</a>
                 <a href="#" class="list-group-item">Category 2</a>
