--- a/templates/article/telephonie.html.twig
+++ b/templates/article/telephonie.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="container">
         <div class="bg-light p-3">
-            <h1>Les produits informatiques</h1>
+            <h1>Les produits telephoniques</h1>
         </div>
         <div class="row">
 
@@ -37,25 +37,25 @@
 
                 <div class="row">
                     {% for article in articles %}
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="{{ path('article', {id : article.id}) }}"><img class="card-img-top" src="/uploads/{{ article.image }}" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">{{ article.nom }}</a>
-                                </h4>
-                                <h5>{{ article.prix }} Dt</h5>
-                                <p class="card-text">{{ article.description }}</p>
-                                <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
-                                    <i class="fas fa-shopping-cart mr-1"></i>
-                                    Ajouter
-                                </a>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="card h-100">
+                                <a href="{{ path('article', {id : article.id}) }}"><img class="card-img-top" src="/uploads/{{ article.image }}" alt=""></a>
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        <a href="#">{{ article.nom }}</a>
+                                    </h4>
+                                    <h5>{{ article.prix }} Dt</h5>
+                                    <p class="card-text">{{ article.description }}</p>
+                                    <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
+                                        <i class="fas fa-shopping-cart mr-1"></i>
+                                        Ajouter
+                                    </a>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
                     {% endfor %}
                 </div>
