--- a/templates/article/informatique.html.twig
+++ b/templates/article/informatique.html.twig
@@ -77,5 +77,5 @@
 
 {% block javascripts %}
     <script src="/js/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
