--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -4,17 +4,12 @@
 
 {% block stylesheets %}
 {{ parent() }}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/profile.css">
 {% endblock %}
 
 {% block body %}
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    </head>
 
-
-    <hr>
     <div class="container bootstrap snippet">
         <div class="row">
             <div class="col-sm-10"><h1>{{ app.user.loginName }}</h1></div>
@@ -160,9 +155,12 @@
         </div><!--/col-9-->
     </div><!--/row-->
 
+
+
 {% endblock %}
 
 {% block javascripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/profile.js"></script>
 {% endblock %}
