--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -26,7 +26,7 @@
                 <div class="card bg-light mb-3">
                     <div class="card-body">
                         <a href="" data-toggle="modal" data-target="#productModal">
-                            <img class="img-fluid" style="height: 500px; width: 500px;" src="/uploads/{{ article.image }}" />
+                            <img class="img-fluid" style="height: 500px; width: 500px;" src="/uploads/{{ article.image }}" alt="Image" />
                             <p class="text-center">Zoom</p>
                         </a>
                     </div>
@@ -42,7 +42,7 @@
                             <div class="form-group">
                                 <label>Quantity :</label>
                                 <div class="input-group mb-3">
-                                    <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ article.quantite }}">
+                                    <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ article.quantite }}" value="1">
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success btn-lg btn-block text-uppercase">
@@ -89,8 +89,6 @@
                             by {{ review.username }}
                             <p class="blockquote">
                             <p class="mb-0">{{ review.content }}</p>
-
-                            </p>
                             <hr>
                         </div>
     {% endfor %}
@@ -116,7 +114,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" style="height: 500px; width: 500px;" src="/uploads/{{ article.image }}" />
+                    <img class="img-fluid" style="height: 500px; width: 500px;" src="/uploads/{{ article.image }}" alt="Image" />
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -133,6 +131,6 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/shop.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {% endblock %}
