cart fix + quantity fix

--- a/templates/article/panier.html.twig
+++ b/templates/article/panier.html.twig
@@ -58,7 +58,7 @@
             </tfoot>
         </table>
         {% else %}
-            <p>Lich King !</p>
+            <p>Aucun produit !</p>
         {% endif %}
     </div>
 
