--- a/templates/article/telephonie.html.twig
+++ b/templates/article/telephonie.html.twig
@@ -76,6 +76,7 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <script src="/js/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
