--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,18 +40,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('panier') }}">Cart</a>
                     </li>
-                    {% if not is_granted('ROLE_USER') %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_login') }}">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_register') }}">Register</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
-                    </li>
-                    {% endif %}
                 </ul>
 
                 <form class="form-inline my-2 my-lg-0">
@@ -68,6 +56,20 @@
                         <span class="badge badge-light">{{ app.session.get('panier')|length }}</span>
                     </a>
                 </form>
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Account</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% if not is_granted('ROLE_USER') %}
+                            <a class="dropdown-item" href="{{ path('app_register') }}">Register</a>
+                            <a class="dropdown-item" href="{{ path('app_login') }}">Login</a>
+                            {% else %}
+                            <a class="dropdown-item" href="{{ path('account', {id : app.user.client.id}) }}">Profile</a>
+                            <a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                </ul>
 
             </div>
         </div>
