--- a/templates/email/welcome.html.twig
+++ b/templates/email/welcome.html.twig
@@ -34,9 +34,6 @@
             margin: 0;
             padding: 10px 20px 20px 20px;
         }
-        .logo {
-            width: 100%;
-        }
         .text-center {
             text-align: center;
         }
@@ -57,38 +54,24 @@
 <div class="body">
     <div class="container">
         <div class="header text-center">
-            <a href="#homepage">
-                <img src="path/to/logo.png" class="logo" alt="SpaceBar Logo">
-            </a>
         </div>
         <div class="content">
-            <h1 class="text-center">Nice to meet you %name%!</h1>
+            <h1 class="text-center">Nice to meet you name!</h1>
             <p class="block">
-                Welcome to <strong>the Space Bar</strong>, we can't wait to read what you have to write.
-                Get started on your first article and connect with the space bar community.
+                Welcome to <strong>Ecommerce</strong>
+                Make sure to browse our products !
             </p>
             <p class="block text-center">
-                <a href="#new" class="btn">Get writing!</a>
-            </p>
-            <p class="block">
-                Check out our existing articles and share your thoughts in the comments!
-            </p>
-            <p class="block text-center">
-                <a href="#homepage" class="btn">Get reading!</a>
-            </p>
-            <p class="block">
-                We're so excited that you've decided to join us in our corner of the universe,
-                it's a friendly one with other creative and insightful writers just like you!
-                Need help from a friend? We're always just a message away.
+                <a href="#new" class="btn">Products</a>
             </p>
         </div>
         <div class="footer">
             <p class="block">
                 Cheers,<br><br>
-                Your friendly <em>Space Bar Team</em>
+                Your friendly <em>Admin</em>
             </p>
             <p class="block bottom text-center">
-                Sent with â¤ï¸ from the friendly folks at The Space Bar
+                Sent by ecommmerce admins
             </p>
         </div>
     </div>
