--- a/templates/article/informatique.html.twig
+++ b/templates/article/informatique.html.twig
@@ -44,7 +44,7 @@
                                 <h4 class="card-title">
                                     <a href="#">{{ article.nom }}</a>
                                 </h4>
-                                <h5>{{ article.prix }} Dt</h5>
+                                <h5>{{ article.prix }} $</h5>
                                 <p class="card-text">{{ article.description }}</p>
                                 <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
                                     <i class="fas fa-shopping-cart mr-1"></i>
