--- a/templates/home/profile.html.twig
+++ b/templates/home/profile.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Hello CommerceController!{% endblock %}
 
+{% block stylesheets %}
+{{ parent() }}
+{% endblock %}
+
 {% block body %}
     <head>
         <meta charset="utf-8">
