--- a/templates/article/panier.html.twig
+++ b/templates/article/panier.html.twig
@@ -32,12 +32,12 @@
                         </div>
                     </div>
                 </td>
-                <td data-th="Price">{{ item.article.prix }} TND</td>
+                <td data-th="Price">{{ item.article.prix }} $</td>
                 <form method="POST" action="{{ path('panier_add', {id : item.article.id}) }}">
                 <td data-th="Quantity">
                     <input type="number" class="form-control text-center" name="quantity" id="quantity" min="1" max="{{ item.article.quantite }}" value="{{ item.quantite }}">
                 </td>
-                <td data-th="Subtotal" class="text-center">{{ item.article.prix * item.quantite }} TND</td>
+                <td data-th="Subtotal" class="text-center">{{ item.article.prix * item.quantite }} $</td>
                 <td class="actions" data-th="">
                     <button type="submit" class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
                     </form>
@@ -52,8 +52,8 @@
             <tr>
                 <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
                 <td colspan="2" class="hidden-xs"></td>
-                <td class="hidden-xs text-center"><strong>Total {{ total }} TND</strong></td>
-                <td><a href="https://www.paypal.com/webapps/shoppingcart?mfid=1546373779156_cb91e3a2b2dc7&flowlogging_id=cb91e3a2b2dc7#/checkout/shoppingCart" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
+                <td class="hidden-xs text-center"><strong>Total {{ total }} $</strong></td>
+                <td><a href="{{ path('payment') }}" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
             </tr>
             </tfoot>
         </table>
