--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -30,7 +30,7 @@
                 <ul class="list-group">
                     <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
                     <li class="list-group-item text-right"><span class="pull-left"><strong>Articles</strong></span> 125</li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong>Reviews</strong></span> 13</li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong>Reviews</strong></span> {{ review|length }}</li>
                 </ul>
 
 
