--- a/templates/admin/home_admin.html.twig
+++ b/templates/admin/home_admin.html.twig
@@ -3,10 +3,91 @@
 {% block title %}Hello AdminController!{% endblock %}
 {% block stylesheets %}
     {{parent()}}
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+    <style>
+        .card-counter{
+            box-shadow: 2px 2px 10px #DADADA;
+            margin: 5px;
+            padding: 20px 10px;
+            background-color: #fff;
+            height: 100px;
+            border-radius: 5px;
+            transition: .3s linear all;
+        }
+
+        .card-counter:hover{
+            box-shadow: 4px 4px 20px #DADADA;
+            transition: .3s linear all;
+        }
+
+        .card-counter.primary{
+            background-color: #007bff;
+            color: #FFF;
+        }
+
+        .card-counter.danger{
+            background-color: #ef5350;
+            color: #FFF;
+        }
+
+        .card-counter.success{
+            background-color: #66bb6a;
+            color: #FFF;
+        }
+
+        .card-counter.info{
+            background-color: #26c6da;
+            color: #FFF;
+        }
+
+        .card-counter i{
+            font-size: 5em;
+            opacity: 0.2;
+        }
+
+        .card-counter .count-numbers{
+            position: absolute;
+            right: 35px;
+            top: 20px;
+            font-size: 32px;
+            display: block;
+        }
+
+        .card-counter .count-name{
+            position: absolute;
+            right: 35px;
+            top: 65px;
+            font-style: italic;
+            text-transform: capitalize;
+            opacity: 0.5;
+            display: block;
+            font-size: 18px;
+        }
+    </style>
 {% endblock %}
 
 {% block body %}
-<h1>hgellodqzd</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card-counter info">
+                    <i class="fa fa-users"></i>
+                    <span class="count-numbers">{{ users|length }}</span>
+                    <span class="count-name">Users</span>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card-counter success">
+                    <i class="fa fa-database"></i>
+                    <span class="count-numbers">{{ articles|length }}</span>
+                    <span class="count-name">Articles</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
 
@@ -14,4 +95,6 @@
 
 {% block javascripts %}
     {{ parent() }}
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {% endblock %}
